# Molecule-Generation-With-RL

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: global.yaml
configs/diffdock/: baseline.yaml  evaluation.yaml  main_eval_top10.yaml  posttraining.yaml  rerank_baseline.yaml  reward_filtering.yaml  smoke.yaml  smoke_top4.yaml  tiny.yaml  tiny_real.yaml  tiny_real_top10.yaml
docs/: RL_fine-tuning.md  diffdock_setup.md  experiments.md  high_low_pipeline.md  timeline.md
scripts/: check_diffdock_env.sh  create_tiny_pdbbind_mvp.py  create_tiny_real_pdbbind.py  diagnose_run_structures.py  extract_pdbbind_smoke_complex.py  freeze_evaluation_protocol.py  list_run_input_files.py  package_run_artifacts.sh  run_diffdock_smoke.sh  run_diffdock_tiny.sh  run_diffdock_tiny_real.sh  run_diffdock_tiny_real_top10.sh  run_evaluation.sh  run_frozen_eval_pipeline.sh  run_reranking.sh  run_rl_posttraining_smoke.sh  run_tiny_real_pipeline.sh  setup_diffdock.sh  setup_pdbbind_smoke_complex.py
src/data/: loaders.py  (+3 more)
tests/: test_artifact_logging.py  test_baseline_generation.py  test_config_loading.py  test_data_loading.py  test_error_logging.py  test_freeze_evaluation_protocol.py  test_manifests.py  test_package_run_artifacts.py  test_paths_logging.py  test_pdbbind_smoke_extraction.py  test_pdbbind_smoke_setup.py  test_reranking.py  test_reward_computation.py  test_rl_agent.py  test_rl_data_rollouts.py  test_rl_rewards.py  test_rl_types.py  test_rmsd.py  test_run_logging.py  test_run_posttraining.py  test_structure_diagnostics.py  test_tiny_real_pdbbind.py  test_validation.py
(+35 files in other folders)
